# CSV_Reader

./: CMakeLists.txt  CSV.h  CSV_cyclic_dependency.cpp  CSV_cyclic_dependency.h  CSV_expression.cpp  CSV_expression.h  CSV_field.cpp  CSV_field.h  CSV_parser.cpp  CSV_parser.h  CSV_reader.h  CSV_table.cpp  CSV_table.h  CSV_value.cpp  CSV_value.h  Division.cpp  Division.h  IOperation.h  Minus.cpp  Minus.h  Multiplication.cpp  Multiplication.h  Plus.cpp  Plus.h  README.md  file.csv  main.cpp
csv_fields/: CSV_expression.cpp  CSV_expression.h  CSV_field.cpp  CSV_field.h  CSV_operation_number.cpp  CSV_operation_number.h  CSV_value.cpp  CSV_value.h
csv_operations/: Division.cpp  Division.h  IOperation.h  Minus.h  Multiplication.cpp  Multiplication.h  Plus.cpp  Plus.h
csv_utils/: CSV_cyclic_dependency.cpp  CSV_cyclic_dependency.h  CSV_parser.cpp  CSV_parser.h  CSV_reader.cpp  CSV_reader.h  CSV_table.hpp  CSV_utilfunc.cpp  CSV_utilfunc.h
tests/: tests_info.txt
tests/correct_csvs/: file11.csv  file12.csv  file13.csv  file14.csv  file16.csv  file17.csv
tests/incorrect_csvs/: file010.csv  file011.csv  file012.csv  file013.csv  file014.csv  file015.csv  file016.csv  file017.csv  file018.csv  file019.csv  file020.csv  file021.csv  file022.csv  file03.csv  file04.csv  file05.csv  file06.csv  file07.csv  file08.csv  file09.csv
